# equip

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/skills/algorithmic-art/: .equip.json
.github/workflows/: ci.yml  release.yml
demos/: equip-init.cast
docs/analysis/: agent-skills-cli-research.md  ai-agent-skills-research.md  openskills-research.md  skill-installer-comparison.md  skillz-jkitchin-research.md  xcode-mcp-bridge-research.md
docs/plans/: registry-migration.md  v2-cross-machine-sync.md
scripts/: create-base-vm.sh  record-demo.sh  test-vm.sh
skill/: SKILL.md
src/: agents.rs  config.rs  hash.rs  lib.rs  main.rs  metadata.rs  ops.rs  output.rs  registry.rs  skill.rs  source.rs  sync.rs  telemetry.rs
src/commands/: config_cmd.rs  export.rs  fix.rs  init.rs  install.rs  list.rs  mod.rs  outdated.rs  remove.rs  restore.rs  search.rs  status.rs  survey.rs  sync.rs  update.rs
tests/: cli.rs
tests/fixtures/misnamed-dir/: SKILL.md
tests/fixtures/multi-skill-repo/skill-one/: SKILL.md
tests/fixtures/multi-skill-repo/skill-two/: SKILL.md
tests/fixtures/valid-skill/: SKILL.md
website/: index.html  main.js  style.css
website/docs/: agents.html  commands.html  concepts.html  configuration.html  docs.css  docs.js  getting-started.html  index.html  sync.html
