[package]
name = "equip"
version = "0.2.0"
edition = "2024"
description = "Install SKILL.md files across AI coding agents"
license = "MIT"
repository = "https://github.com/bradleydwyer/equip"

[[bin]]
name = "equip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
