[package]
name = "equip"
version = "0.6.0"
edition = "2024"
description = "Install SKILL.md files across AI coding agents"
license = "MIT"
repository = "https://github.com/bradleydwyer/equip"

[[bin]]
name = "equip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
equip-lib = { git = "https://github.com/bradleydwyer/equip-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
